--- a/app/ui/navbar/navbar.module.css
+++ b/app/ui/navbar/navbar.module.css
@@ -2,6 +2,9 @@
     background-color: #ffffff;
     border-bottom: 0.5rem solid;
     border-bottom-color: #ffd977;
+    width: 100vw;
+    position: absolute;
+    z-index: 3;
 }
 
 .navbar_brand {
